<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@mipmap/home"/>

    <item
        android:id="@+id/nav_experiences"
        android:title="@string/trips_Experiences"
        android:icon="@mipmap/experiences"/>

    <!--<item-->
        <!--android:id="@+id/nav_equipment"-->
        <!--android:title="@string/equipment_sale"-->
        <!--android:icon="@mipmap/equipment"/>-->

    <!--<item-->
        <!--android:id="@+id/nav_articles"-->
        <!--android:title="@string/articles"-->
        <!--android:icon="@mipmap/article"/>-->

    <!--<item-->
        <!--android:id="@+id/nav_voucher"-->
        <!--android:title="@string/vouchers"-->
        <!--android:icon="@mipmap/vouchers"/>-->

        <item
            android:id="@+id/nav_saved"
            android:title="@string/saved"
            android:icon="@mipmap/saved"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings"
            android:icon="@mipmap/settings"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:checkable="false"
            android:icon="@mipmap/exit"/>
    </group>
</menu>
