<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/traveler"
    tools:context=".MainActivity">

        <!--//////////////////Application Title////////////////////////-->
    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="252dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp" />


        <!--//////////////////Login Email////////////////////////-->
        <EditText
            android:id="@+id/login_email_ed"
            android:drawableLeft="@drawable/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="238dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white" />

        <!--//////////////////Login Password////////////////////////-->
    <EditText
        android:id="@+id/login_password_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_ed"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@drawable/key"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />

    <!--//////////////////Login Button////////////////////////-->
    <Button
        android:id="@+id/login"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="149dp"
        android:text="@string/login" />

    <!--//////////////////Sign Up Button////////////////////////-->
    <Button
        android:id="@+id/signup"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:text="@string/signUp" />

</RelativeLayout>