<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/traveler"
    tools:context=".LoginActivity">

        <!--//////////////////Application Title////////////////////////-->
    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="252dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp" />


        <!--//////////////////Login Email////////////////////////-->
    <EditText
        android:id="@+id/login_email_ed"
        android:textColor="@android:color/white"
        android:layout_width="285dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:drawablePadding="10sp"
        android:singleLine="true"/>


        <!--//////////////////Login Password////////////////////////-->
    <EditText
        android:id="@+id/login_password_ed"
        android:layout_width="285dp"
        android:layout_height="72dp"
        android:layout_below="@+id/login_email_ed"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/key"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />


    <!--//////////////////Login Button////////////////////////-->
    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="10dp"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_ed"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBrown"
        android:text="@string/login" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:text="@string/CreateAccount"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/login_ProgressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:progressBackgroundTint="@android:color/black" />

</RelativeLayout>