<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <AutoCompleteTextView
        android:id="@+id/home_search_textview"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/where_to"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/homeserach_button"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_marginStart="126dp"
        android:background="@color/colorOrange"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_textview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="185dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:text="@string/recently_posted"
        android:textColor="@color/colorOrange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_viewpager" />

    <android.support.v4.view.ViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="281dp"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_saved"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorOrange"
        android:text="@string/saved"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentSearch2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="18dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="21dp"
        android:gravity="center_horizontal"
        android:text="@string/popular_searches"
        android:textColor="@color/colorOrange"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeserach_button" />

    <TextView
        android:id="@+id/recentSearch3"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic|bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/recentSearch2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/recentSearch2"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic|bold"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/recentSearch1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/recentSearch1"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic|bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>